<resources>
    <string name="app_name">Cul de Chouette</string>
    <string name="sirotage">Sirotage</string>
    <string name="chouette_velute">Chouette Velute</string>
    <string name="suite">Suite</string>
    <string name="souflette">Souflette</string>
    <string name="grelottine">Grelottine</string>
    <string name="summary">Résumé</string>

    <string name="start">Commencer la partie</string>
    <string name="add_player">Ajouter un joueur</string>
    <string name="validate_roll">Valider le jet</string>
    <string name="validate_bet">Valider les paris</string>
    <string name="validate_challenge">Valider le défi</string>
    <string name="start_challenge">Démarrer le défi</string>
    <string name="back_to_game">Revenir au jeu</string>
    <string name="next_turn">Tour suivant</string>
    <string name="civet">Civet</string>
    <string name="passe_grelot">Passe-Grelot</string>

    <string name="figure_chouette">Chouette</string>
    <string name="figure_cul_de_chouette">Cul de chouette</string>
    <string name="figure_cul_de_chouette_sirote">Cul de chouette siroté</string>
    <string name="figure_chouette_velute">Chouette velute</string>
    <string name="figure_suite">Suite</string>
    <string name="figure_suite_velute">Suite velute</string>
    <string name="figure_velute">Velute</string>
    <string name="figure_souflette">Souflette</string>
    <string name="figure_neant">Néant</string>

    <string name="player_name">Nom du joueur</string>
    <string name="no_team">Aucune équipe</string>
    <string name="none">Aucun</string>
    <string name="none_e">Aucune</string>
    <string name="no_one">Personne</string>
    <string name="zero">0</string>
    <string name="excl">!</string>
    <string name="dice">Valeur du dé</string>
    <string name="dice1">Dé 1</string>
    <string name="dice2">Dé 2</string>
    <string name="dice3">Dé 3</string>
    <string name="wrong_dice_input">Lancer invalide</string>
    <string name="wrong_bet_input">Mise invalide</string>
    <string name="wrong_select_input">Selection invalide</string>
    <string name="passe_grelot_cancel">Passe-Grelot ! Le défi est annulé !</string>
    <string name="player_score_neg">Impossible avec des joueurs au score négatif</string>
    <string name="grelottine_acq">Grelottine acquise !</string>
    <string name="civet_acq">Civet acquis !</string>
    <string name="bevue_civet">Bévue ! Tu n\'as pas de civet !</string>
    <string name="bevue_grelottine">Bévue ! Tu n\'as pas de grelottine !</string>
    <string name="bevue_passe_grelot">Bévue ! Tu n\'as pas de passe-grelot !</string>
    <string name="playing">\ est en train de jouer</string>
    <string name="playing_grelottine">\ relève son défi Grelottine</string>
    <string name="figure">Figure :\ </string>
    <string name="score">Score :\ </string>
    <string name="player_score">Scores des joueurs :</string>
    <string name="bet">Place aux paris :</string>
    <string name="sirotage_fail">\ rate son sirotage</string>
    <string name="sirotage_success">\ sirote sa\ </string>
    <string name="contre_sirop_expression">apprécie les fruits au sirop !</string>
    <string name="chouette_velute_expression">a trouvé un dur caillou !</string>
    <string name="suite_expression">ça picotte !</string>
    <string name="civet_expression">Civet de</string>
    <string name="grelottine_expression">Grelottine de</string>
    <string name="on">sur</string>
    <string name="loose">perd</string>
    <string name="challenge">\ défie</string>
    <string name="win_the_game">gagne la partie !</string>
    <string name="points">pts</string>

    <string name="doublette_hint">Si vous êtes nombreux (plus de 6), il est possible de jouer en Doublette (ou Triplette !). Deux joueurs se mettent ensemble afin de marquer des points plus rapidement. \nLes deux joueurs en doublette doivent se positionner à l\'opposé l\'un de l\'autre autour de la table. Entrez alors des noms d\'équipe au lieu des noms des joueurs.</string>
    <string name="siroter_hint">Si une Chouette est obtenue, le joueur peut tenter de relancer un dé pour obtenir un Cul de Chouette. Si le joueur réussit son Sirotage, il gagne les points du Cul de Chouette, sinon on soustrait de son score les points de la Chouette obtenue initialement. Les autres joueurs peuvent décider de miser sur le résultat du dé que le joueur va lancer. Un parieur perd initialement 5 points, et en remporte 30 si le dé correspond. Chaque nombre est annoncé par les joueurs de la façon suivante : Linotte (1), Alouette (2), Fauvette (3), Mouette (4), Bergeronnette (5), Chouette (6).</string>
    <string name="contre_sirop_hint">Si un Sirotage échoue, le premier concurrent à lever le poing (sans frapper ce qui est éventuellement au-dessus de lui si possible) et crier \"J\'apprécie les fruits au sirop !\" gagne le double du dixième des points du Cul de Chouette tenté. En cas d\'égalité entre deux joueurs, il n\'y a aucun gain.</string>
    <string name="chouette_velute_hint">Le premier joueur qui frappe dans ses mains en criant \"Pas mou le caillou !\" gagne les points de la Chouette Velute. \nSi plusieurs joueurs sont à égalité, et que le joueur qui a lancé les dés en fait partie, tous les autres joueurs à égalité lancent un dé. Si l\'un des joueurs fait un 6, il gagne les points, sinon c\'est le joueur qui a lancé les dés qui garde ses points. \nSi plusieurs joueurs sont à égalité, et que le joueur qui a lancé les dés n\'en fait pas partie, tous les autres joueurs à égalité lancent un dé. Le premier qui fait un 6 gagne les points. En cas d\'égalité, il faut relancer les dés jusqu\'à ce qu\'un seul des joueurs fasse un 6.</string>
    <string name="suite_hint">Tous les joueurs doivent taper du poing sur la table en criant : \"Grelotte ça picote !\". Le dernier joueur à le faire perd 10 points. \nEn cas d\'égalité, les joueurs concernés se départagent en criant : \"Sans fin est la moisissure des bières bretonnes !\". \nS\'il y a toujours égalité, les joueurs concernés se départagent en lançant chacun un dé, c\’est celui qui aura fait le plus petit score qui perdra les 10 points. S\’il y a plusieurs joueurs qui ont fait le plus petit score, ils recommencent pour se départager, mais cette fois pour perdre 20 points (puis 30 points, etc).</string>
    <string name="souflette_hint">Le joueur peut défier un autre joueur de son choix. Ce joueur a alors trois jets de dés pour réaliser lui aussi un 421. Les éventuels points donnés par d\'éventuelles combinaisons réalisées lors de ces éventuels jets ne sont pas comptés. Les joueurs peuvent conserver les dés ayant donné 4, 2 ou 1 entre chaque lancer, pour ainsi éviter de les relancer et avoir plus de chances de réussir le défi. \nSi le joueur défié réussit à faire 421 : \n- du premier coup, il gagne 50 points et le défiant les perd. \n- du deuxième coup, il gagne 40 points et le défiant les perd. \n- du troisième coup, il gagne 30 points et le défiant les perd. \nSi le joueur défié échoue, il perd 30 points et le défiant les gagne.</string>
    <string name="civet_hint">Lorsqu\'un joueur a gagné un Civet, il peut l\'utiliser quand bon lui semble si son score est positif, avant de lancer ses deux premiers dés. Il mise alors un certain nombre de ses points (102 maximum), et parie sur son prochain coup (Chouette, Velute, Chouette Velute, Suite, ou Cul de Chouette). Dans le cas d\'un Cul de Chouette, il doit préciser avec ou sans Sirotage.</string>
    <string name="grelottine_hint">Lorsqu\’un joueur réalise un Néant, un autre joueur, s\'il a une Grelottine, peut décider de le défier en criant "Grelottine !". Si plusieurs joueurs crient "Grelottine !" simultanément, c\’est celui qui a le plus petit score qui est prioritaire. \nLe joueur défiant choisit alors une figure que le joueur défié devra réaliser. Le nombre maximal de points mis en jeu dépend du score du défié, du défiant et de la figure choisie. Si le joueur défié réalise la combinaison demandée, il gagne les points mis en jeu, et le défiant les perd, sinon l\'inverse se produit. \nQuoi qu\'il en soit, le joueur défié gagne les points de la combinaison qu\’il a réalisé. Les autres joueurs peuvent miser (-5 pts) sur la réussite du défi (+10 pts à gagner). Enfin, les Grelottines des deux joueurs impliqués disparaissent.</string>

    <string-array name="dice_options">
        <item>Aucun</item>
        <item>Linotte</item>
        <item>Alouette</item>
        <item>Fauvette</item>
        <item>Mouette</item>
        <item>Bergeronnette</item>
        <item>Chouette</item>
    </string-array>
    <string-array name="suite_loose_options">
        <item>10 pts</item>
        <item>20 pts</item>
        <item>30 pts</item>
        <item>40 pts</item>
        <item>50 pts</item>
        <item>60 pts</item>
        <item>70 pts</item>
        <item>80 pts</item>
        <item>90 pts</item>
    </string-array>
    <string-array name="souflette_options">
        <item>perd sa souflette</item>
        <item>souffle du premier coup</item>
        <item>souffle en deux coups</item>
        <item>souffle en trois coups</item>
    </string-array>
    <string-array name="grelottine_options">
        <item>Aucun</item>
        <item>Réussi</item>
        <item>Echoue</item>
    </string-array>
</resources>
